Enable build caching in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,12 @@ before_install:
 
 script:
 - ./gradlew -PdisablePreDex assemble lint{With,No}GPlay{Debug,Release} test{With,No}GPlay{Debug,Release}UnitTest
+
+before_cache:
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
+  - $HOME/.android/build-cache
