Replace flavor fdroid with buildConfig

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,11 @@ android {
     productFlavors {
         withGPlay {
             dimension "variant"
+            buildConfigField "boolean", "isFDroid", "false"
         }
         noGPlay {
             dimension "variant"
+            buildConfigField "boolean", "isFDroid", "true"
         }
     }
 
